friends: style: fix overflow

--- a/css/friends.css
+++ b/css/friends.css
@@ -26,7 +26,7 @@
         width: 100%;
         transition: all .3s;
         height: 0px;
-        font-size: medium;
+        font-size: smaller;
     }
     .friendDesc {
 /*         opacity: 0; */
@@ -46,8 +46,8 @@
         box-shadow: 0px 2px 10px 0px gray;
         .friendJoin {
             opacity: initial;
-            margin-top: -15px;
-            height: 15px;
+            margin-top: -11px;
+            height: 11px;
 
         }
         .friendDesc {
